# mtr-vulkan-renderer

./: CMakeLists.txt  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
docs/: architecture.md
scripts/: compile-shaders.bat  compile-shaders.sh  setup-dev.sh
src/main/java/com/mtr/vulkanrenderer/: MTRVulkanRenderer.java  MTRVulkanRendererClient.java
src/main/java/com/mtr/vulkanrenderer/bridge/: MeshData.java  NativeLibraryLoader.java  RenderCommand.java  VulkanBridge.java
src/main/java/com/mtr/vulkanrenderer/config/: ModConfig.java
src/main/java/com/mtr/vulkanrenderer/mixin/: MixinRailRenderer.java  MixinRenderHelper.java  MixinSignalRenderer.java  MixinTrainRenderer.java
src/main/java/com/mtr/vulkanrenderer/render/: RailVulkanRenderer.java  RenderDispatcher.java  SignalVulkanRenderer.java  StationVulkanRenderer.java  TrainVulkanRenderer.java
src/main/java/com/mtr/vulkanrenderer/vulkan/: VulkanBuffer.java  VulkanContext.java  VulkanPipeline.java  VulkanShaderManager.java  VulkanTextureManager.java
src/main/resources/: fabric.mod.json  mtr-vulkan-renderer.accesswidener  mtr-vulkan-renderer.mixins.json
src/main/resources/assets/mtr-vulkan-renderer/lang/: en-us.json  zh-cn.json
src/main/resources/shaders/: rail.frag  rail.vert  signal.frag  signal.vert  station.frag  station.vert  train.frag  train.vert  translucent.frag  translucent.vert
src/native/include/: mesh_manager.h  mtr_vulkan_renderer.h  rail_renderer.h  train_renderer.h  vulkan_buffer.h  vulkan_context.h  vulkan_pipeline.h  vulkan_shader.h  vulkan_texture.h
src/native/src/: jni_bridge.cpp  mesh_manager.cpp  mtr_vulkan_renderer.cpp  rail_renderer.cpp  train_renderer.cpp  volk_loader.cpp  vulkan_buffer.cpp  vulkan_context.cpp  vulkan_pipeline.cpp  vulkan_shader.cpp  vulkan_texture.cpp
src/test/java/com/mtr/vulkanrenderer/bridge/: MeshDataTest.java
src/test/java/com/mtr/vulkanrenderer/config/: ModConfigTest.java
